<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">
    <item
        android:id="@+id/action_show_girls"
        android:orderInCategory="100"
        android:title="@string/action_show_girls"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_github_hot"
        android:orderInCategory="100"
        android:title="@string/action_github_trending"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switch_theme"
        android:orderInCategory="100"
        android:title="@string/action_switch_theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
